--- a/Proyecto_Final_Coder/pages/productos.html
+++ b/Proyecto_Final_Coder/pages/productos.html
@@ -95,7 +95,7 @@
         </div>
           <div class="col">
             <div class="card h-10 titulo3">
-            <img src="../GaleriaVino/vino_rutini.webp" class="card-img-top rounded mx-auto d-block img_tamano" alt="imagen de vino Rutini">
+            <img src="../GaleriaVino/vino_rutini 3.webp" class="card-img-top rounded mx-auto d-block img_tamano" alt="imagen de vino Rutini">
             <div class="card-body">
               <h5 class="card-title">Vino Rutini</h5>
               <p>Precio: $1.500</p>
@@ -103,7 +103,7 @@
             </div>
           </div></div>
           <div class="col"><div class="card h-10 titulo3">
-            <img src="../GaleriaVino/vino_trumpeter.webp" class="card-img-top rounded float-end img_tamano" alt="imagen de vino Trumpeter">
+            <img src="../GaleriaVino/vino_trumpeter 4.webp" class="card-img-top rounded float-end img_tamano" alt="imagen de vino Trumpeter">
             <div class="card-body">
               <h5 class="card-title">Vino Trumpeter</h5>
               <p>Precio: $1.100</p>
